--- a/package.json
+++ b/package.json
@@ -17,9 +17,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.8",
     "morgan": "~1.9.1",
+    "nodemon": "^2.0.15",
     "pug": "2.0.0-beta11"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.15"
   }
 }
